[package]
name = "ld"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "core",
    "pool/transactions",
    "pool/blockchain",
]

[dependencies]
core = {path = "core"}
pool-blockchain = {path = "pool/blockchain"}
pool-transactions = {path = "pool/transactions"}
